--- a/public/src/components/ChatSection/ChatSection.module.css
+++ b/public/src/components/ChatSection/ChatSection.module.css
@@ -6,12 +6,14 @@
 }
 
 .warning-text {
+  background-color: var(--chat-section-bg);
   width: 100%;
   position: absolute;
-  bottom: 0px;
+  bottom: -15px;
   left: 50%;
   transform: translate(-50%, -50%);
   margin: 12px auto;
+  padding: 10px 0px;
 }
 
 .warning-text p,
@@ -25,19 +27,21 @@
 
 @media (max-width: 1106px) {
   .warning-text {
-    padding: 0px 20px;
+    padding: 10px 20px;
   }
 }
 
 @media (max-width: 680px) {
   .warning-text {
+    bottom: -10px;
     margin: 2px auto;
+    padding: 1px 20px;
   }
 }
 
 @media (max-width: 360px) {
   .warning-text {
     margin: 0px auto;
-    bottom: -8px;
+    bottom: 4px;
   }
 }
