show loaction by ip or update by user current location done

--- a/public/src/components/Sidebar/Sidebar.module.css
+++ b/public/src/components/Sidebar/Sidebar.module.css
@@ -461,6 +461,7 @@ resent chat section  */
 .location-name {
   display: block;
   color: var(--location-name-color);
+  text-transform: capitalize;
 }
 
 .span-dot {
