--- a/public/src/components/Header/Header.module.css
+++ b/public/src/components/Header/Header.module.css
@@ -4,6 +4,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 .left-section,
