--- a/public/src/components/UserDetails/UserDetails.module.css
+++ b/public/src/components/UserDetails/UserDetails.module.css
@@ -13,6 +13,8 @@
   padding: 15px;
   color: var(--user-details-font-color);
   box-shadow: var(--user-details-box-shadow);
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 .user-main a {
