--- a/public/src/components/UserDetails/UserDetails.module.css
+++ b/public/src/components/UserDetails/UserDetails.module.css
@@ -70,9 +70,18 @@
   flex-flow: nowrap row;
   gap: 6px;
   position: absolute;
-  bottom: 15px;
+  bottom: 10px;
   font-size: 13px;
   font-weight: 500;
+}
+
+.privacy a {
+  padding: 5px 5px;
+  border-radius: 4px;
+}
+
+.privacy a:hover {
+  background-color: var(--user-details-provacy-hover-bg);
 }
 
 .cross {
